<resources>
    <string name="app_name">TerraAzul</string>

    <string name="inicio">Inicio</string>
    <string name="reservas">Mis reservas</string>
    <string name="mobiliario">Mobiliario</string>
    <string name="perfil">Mi perfil</string>
    <string name="faq">FAQ</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="facebook_app_id">1835575040060124</string>

    <string name="abierto">Open navigation drawer</string>
    <string name="cerrado">Close navigation drawer</string>
    <string name="fblogin">Inicia con Facebook</string>

    <string name="user">Usuario: </string>
    <string name="nombre">Nombre: </string>
    <string name="marca1">Marca: </string>
    <string name="placa1">Placa: </string>
    <string name="modelo1">Modelo: </string>
    <string name="mascotas1">Mascotas: </string>
    <string name="time">Ingrese la hora: </string>
    <string name="direccion">Dirección del servicio: </string>
    <string name="direccion1">Ciudad: </string>
    <string name="direccion4">Ciudad</string>
    <string name="direccion2">Direccion</string>
    <string name="direccion5">Direccion: </string>
    <string name="direccionejm">Ejemplo: Calle 29A #53-58, Bello</string>
    <string name="latitud">Latitud</string>
    <string name="eliminar">Eliminar</string>
    <string name="longitud">Longitud</string>
    <string name="pass">Contraseña</string>
    <string name="repass">Repetir Contraseña</string>
    <string name="mail">Email: </string>
    <string name="masc">Masculino</string>
    <string name="fem">Femenino</string>
    <string name="sexo">Ingrese el sexo: </string>
    <string name="agregarauto">Agregar auto</string>
    <string name="ing">Ingresar</string>
    <string name="ing2">Continuar como invitado</string>


    <string name="marca">Ingresa la marca de tu vehículo: </string>
    <string name="placa">Ingresa la placa: </string>
    <string name="modelo">Ingresa el modelo: </string>
    <string name="mascotas">Viajan mascotas en el auto?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="nombreauto">Ingresa un nombre para tu auto: </string>
    <string name="finalizar">Finalizar</string>

    <string name="date">Ingresar fecha: </string>
    <string name="ingresar">Ingresar</string>

    <string name="detalles">Detalles</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>

    <string name="operario">Operario: </string>
    <string name="auto">Auto: </string>
    <string name="fecha">Fecha: </string>
    <string name="continuar">Continuar con otra cuenta</string>
    <string name="register">Registrarse</string>

    <string name="terra1">¿QUÉ ES TERRA AZUL?</string>
    <string name="terra11">Somos una empresa cuyo objetivo es brindar alternativas ecológicas a ciertos servicios.
        Nuestro fuerte actualmente es el lavado de vehículos en seco a domicilio sin el uso de agua y la filosofía de operación
        se rige por el cuidado del medio ambiente y la comodidad de sus clientes.</string>
    <string name="terra2">¿POR QUÉ SURGE TERRA AZUL?</string>
    <string name="terra22">El lavado de autos es una de las actividades que más desperdicia agua en la actualidad.
        Según la EPA (Environmental Protection Office), lavar el auto con una manguera de 5/8 pulgadas y
        a una presión de 50 libras/pulgada^2 utiliza 10 galones/minuto de agua aproximadamente.</string>
    <string name="terra3">¿CÓMO SURGE TERRA AZUL?</string>
    <string name="terra33">Un grupo de emprendedores antioqueños desarrollan un ingenioso producto que permite realizar el
        lavado de los vehículos sin usar una gota de agua, dando paso a la línea de productos Knight.
        Cuando el arquitecto Javier Niebles, preocupado por el cuidado medio ambiente, conoce los productos Knight, aparece la idea de Terra Azul.</string>

    <string name="terra4">¿POR QUÉ UNA APLICACIÓN MÓVIL?</string>
    <string name="terra44">Pensando en la comodidad y rapidez en el servicio a sus clientes brota la idea de una aplicación móvil.
        Según la encuesta Calidad de Vida en 2015, en el 95.6 % de los hogares colombianos al menos una persona posee teléfono celular,
        Es decir, en 96 de cada 100 hogares colombianos hay un teléfono móvil. La empresa quiere cercanía y fácil comunicación con sus clientes y los teléfonos móviles son la tendencia en la actualidad Y además es una alternativa a la solicitud por llamada telefónica.</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Ir a la noticia</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">TERRA AZUL</string>
    <string name="backdrop_subtitle">Comprometidos con el ambiente</string>

    <!--Strings del login-->

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_maps">Map</string>

</resources>
