<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielniebles.terraazulapp.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:textSize="15sp"
        android:id="@+id/eUser"
        android:gravity="center"
        android:inputType="text"
        android:textColorHint="@color/azulterra"
        android:textColor="@color/azulterra"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:textSize="15sp"
        android:id="@+id/ePass"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColorHint="@color/azulterra"
        android:textColor="@color/azulterra" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repass"
        android:textSize="15sp"
        android:id="@+id/eRepeat"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColorHint="@color/azulterra"
        android:textColor="@color/azulterra"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:textSize="15sp"
        android:id="@+id/eMail"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/azulterra"
        android:textColor="@color/azulterra"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rdgGroup1"
            android:layout_marginLeft="20dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masc"
                android:textSize="15sp"
                android:id="@+id/rMas"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fem"
                android:textSize="15sp"
                android:id="@+id/rFem"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agregarauto"
                android:theme="@style/MyButtonTheme"
                android:id="@+id/bAddCar"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/MyButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:id="@+id/bSave"/>
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/MyButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/bCancel"/>
    </LinearLayout>

</LinearLayout>
