<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_loggin2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielniebles.terraazulapp.Loggin2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <EditText
        android:paddingTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:textSize="20sp"
        android:id="@+id/eUserL"
        android:gravity="center"
        android:inputType="text"
        android:textColorHint="@color/azulterra"
        android:textColor="@color/white"/>

    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/azulterra"
        android:hint="@string/pass"
        android:textSize="20sp"
        android:id="@+id/ePassL"
        android:gravity="center"
        android:textColor="@color/azulterra"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ing"
            android:theme="@style/MyButtonTheme"
            android:id="@+id/bEnter1"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ing2"
            android:theme="@style/MyButtonTheme"
            android:id="@+id/bEnter2"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/tRegister"
        android:background="@drawable/text_selector"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"/>

</LinearLayout>
